big boy changing stuff

--- a/gitlearn2/tobi.html
+++ b/gitlearn2/tobi.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>i love tobi bassy</p>
-    <p>you no well oooooo</p>
-    <p>Another onee</p>
+    <p>Tobiiiiii</p>
 </body>
 </html>
